fix linebreak in operation headline

--- a/Resources/Private/Styles/frontend.scss
+++ b/Resources/Private/Styles/frontend.scss
@@ -476,6 +476,9 @@ figure{
 .operation {
    margin-bottom: 30px;
    padding-bottom: 15px;
+   h1 {
+      white-space: nowrap;
+   }
    a {
    }
    .number, &:before {
